
[package]
name = "gst-screencapturekit"
version = "0.1.0"
authors = ["Per Johansson <per@doom.fish>"]
repository = "https://github.com/doom-fish/gst-screencapturekit"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Screencapturekit for gstreamer"

[dependencies]
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", version = "0.24" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", version = "0.24" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", version = "0.24" }
screencapturekit = { version = "0.3" }

[lib]
name = "screencapturekit"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }
